# YanaiLib

./: .gitignore  CMakeLists.txt  README.md
include/freetype/: freetype.h
lib/Windows/: freetyped.lib  ftgl.lib  glfw3.lib
lib/win/: freetype.lib  ftgld.lib  glfw3d.lib  libpng.lib  libpngd.lib
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  app.cpp  app.hpp  clock.cpp  clock.hpp  color.hpp  font.cpp  font.hpp  graphic.cpp  graphic.hpp  key.hpp  mouse.hpp  random.cpp  random.hpp  vector.hpp
vs2015/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  YanaiLib.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
vs2015/src/: YanaiLib.vcxproj  YanaiLib.vcxproj.filters  cmake_install.cmake
vs2015/src/Debug/: YanaiLib.ilk
vs2015/src/YanaiLib.dir/Debug/YanaiLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  (+3 more)
vs2015/src/lib/: App.vcxproj  App.vcxproj.filters  cmake_install.cmake
vs2015/x64/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
xcode/: CMakeCache.txt  cmake_install.cmake
xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
xcode/YanaiLib.build/Debug/ALL_BUILD.build/: Script-5F9A545ABA1C4279B13BF761.sh  dgph  dgph~
xcode/YanaiLib.build/Debug/ZERO_CHECK.build/: Script-F33EB15EDA564763BB5EFE45.sh  dgph  dgph~
xcode/YanaiLib.xcodeproj/: project.pbxproj
xcode/src/: cmake_install.cmake
xcode/src/Debug/: YanaiLib
(+27 files in other folders)
